tests/functional/cases/pass/test_extends_link.coil
a.b.c: 123
another_link: a
link: another_link

test: link {}
expected.b.c: 123
