tests/functional/cases/fail/test_extends_badpath2.coil
a.b.c: 123
test: ........invalid_path {}
